crates/locus-cli/tests/snapshots/init_smoke__init_cluster_crate.snap
---
source: crates/locus-cli/tests/init_smoke.rs
assertion_line: 50
expression: stdout
---
wrote <PATH>/locus.lock
  OT Canonical Domain Ownership: (empty)
  DG Dependency Graph / Direction: (empty)
  AB Abstraction Discipline: (empty)
  BO Boundary Ownership: (empty)
  CF Config/Data Ownership: (empty)
  CR Composition Root Ownership: (empty)
  CX Complexity Budget Ownership: (empty)
  DA Demand-Driven Architecture: (empty)
  DC Documentation / Comment Ownership: (empty)
  ER Error Taxonomy Ownership: (empty)
  FL Failure Lineage Ownership: (empty)
  FO Feature Ownership: (empty)
  MO Module / File Ownership: (empty)
  OB Observability Ownership: (empty)
  PA Port/Adapter Ownership: (empty)
  RM Responsibility Mixing: (empty)
  RW Runtime Work Ownership: (empty)
  TA Test Architecture Ownership: (empty)
  UT Utility / Shared Module Discipline: (empty)
auto-applied: 0 source hints promoted
unresolved: 13

[concept] cluster `user` ambiguous — cluster_crate::domain::User
  confidence 0.75; review members
  if same concept:
    locus accept canonical cluster_crate::domain::User --concept user
    locus accept boundary cluster_crate::api::UserResponse --concept user
  if separate concepts:
    locus accept canonical cluster_crate::domain::User --concept user
    locus accept canonical cluster_crate::api::UserResponse --concept user_userresponse

[layer] domain layer detected, but no paradigms onboarded
  required by BO, ER, FL, RM
  globs: cluster_crate::domain::*
  specify (run for each paradigm you want to onboard):
    locus bo add-domain-path "cluster_crate::domain::*"
    locus fl add-domain-path "cluster_crate::domain::*"
    locus er add-domain-path "cluster_crate::domain::*"
    locus rm add-domain-path "cluster_crate::domain::*"
  or skip these paradigms:
    locus init --acknowledge-empty BO,ER,FL,RM

[feature] no features defined; DG/FO will not fire
  top-level modules: api, domain
  define:
    locus dg define-feature --name api --module "api::*" --public-api "api::*"
    locus dg define-feature --name domain --module "domain::*" --public-api "domain::*"
    # (FO mirrors DG features once these are accepted)
  or skip:
    locus init --acknowledge-empty DG,FO

[paradigm-vacant] AB (Abstraction Discipline) has no definitions
  onboard:
    locus ab accept-single-impl "<symbol>"
  or skip:
    locus init --acknowledge-empty AB

[paradigm-vacant] CF (Config / Data Ownership) has no definitions
  onboard:
    locus cf add-config-path "<glob>"
  or skip:
    locus init --acknowledge-empty CF

[paradigm-vacant] CR (Composition Root) has no definitions
  onboard:
    locus cr add-composition-root "<glob>"
  or skip:
    locus init --acknowledge-empty CR

[paradigm-vacant] DA (Demand-Driven) has no definitions
  onboard:
    locus da enable
  or skip:
    locus init --acknowledge-empty DA

[paradigm-vacant] DC (Documentation) has no definitions
  onboard:
    locus dc enable
  or skip:
    locus init --acknowledge-empty DC

[paradigm-vacant] OB (Observability) has no definitions
  onboard:
    locus ob add-observer-path "<glob>"
  or skip:
    locus init --acknowledge-empty OB

[paradigm-vacant] PA (Port / Adapter) has no definitions
  onboard:
    locus pa add-application-path "<glob>"
  or skip:
    locus init --acknowledge-empty PA

[paradigm-vacant] RW (Runtime Work) has no definitions
  onboard:
    locus rw accept-runtime-owner "<glob>"
  or skip:
    locus init --acknowledge-empty RW

[paradigm-vacant] TA (Test Architecture) has no definitions
  onboard:
    locus ta add-test-path "<glob>"
  or skip:
    locus init --acknowledge-empty TA

[paradigm-vacant] UT (Utility Discipline) has no definitions
  onboard:
    locus ut add-utility-path "<glob>"
  or skip:
    locus init --acknowledge-empty UT

re-run `locus init` after applying changes.
