crates/locus-cli/tests/snapshots/init_smoke__init_sample_crate.snap
---
source: crates/locus-cli/tests/init_smoke.rs
assertion_line: 22
expression: stdout
---
wrote <PATH>/locus.lock
  OT Canonical Domain Ownership: 1 concept(s), 1 boundary(ies), 2 converter(s)
  DG Dependency Graph / Direction: (empty)
  AB Abstraction Discipline: (empty)
  BO Boundary Ownership: (empty)
  CF Config/Data Ownership: (empty)
  CR Composition Root Ownership: (empty)
  CX Complexity Budget Ownership: (empty)
  DA Demand-Driven Architecture: (empty)
  DC Documentation / Comment Ownership: (empty)
  ER Error Taxonomy Ownership: (empty)
  FL Failure Lineage Ownership: (empty)
  FO Feature Ownership: (empty)
  MO Module / File Ownership: (empty)
  OB Observability Ownership: (empty)
  PA Port/Adapter Ownership: (empty)
  RM Responsibility Mixing: (empty)
  RW Runtime Work Ownership: (empty)
  TA Test Architecture Ownership: (empty)
  UT Utility / Shared Module Discipline: (empty)
auto-applied: 2 source hints promoted
unresolved: 16

[feature] no features defined; DG/FO will not fire
  top-level modules: dto, handler, identity, shadow
  define:
    locus dg define-feature --name dto --module "dto::*" --public-api "dto::*"
    locus dg define-feature --name handler --module "handler::*" --public-api "handler::*"
    locus dg define-feature --name identity --module "identity::*" --public-api "identity::*"
    locus dg define-feature --name shadow --module "shadow::*" --public-api "shadow::*"
    # (FO mirrors DG features once these are accepted)
  or skip:
    locus init --acknowledge-empty DG,FO

[threshold] CX001 function-line p95 = 7; default = 50
  p95 differs from default by >1.5×; consider explicit cap
  set explicit cap:
    locus cx set-default --max-lines 8

[paradigm-vacant] AB (Abstraction Discipline) has no definitions
  onboard:
    locus ab accept-single-impl "<symbol>"
  or skip:
    locus init --acknowledge-empty AB

[paradigm-vacant] BO (Boundary Ownership) has no definitions
  onboard:
    locus bo add-domain-path "<glob>"
  or skip:
    locus init --acknowledge-empty BO

[paradigm-vacant] CF (Config / Data Ownership) has no definitions
  onboard:
    locus cf add-config-path "<glob>"
  or skip:
    locus init --acknowledge-empty CF

[paradigm-vacant] CR (Composition Root) has no definitions
  onboard:
    locus cr add-composition-root "<glob>"
  or skip:
    locus init --acknowledge-empty CR

[paradigm-vacant] DA (Demand-Driven) has no definitions
  onboard:
    locus da enable
  or skip:
    locus init --acknowledge-empty DA

[paradigm-vacant] DC (Documentation) has no definitions
  onboard:
    locus dc enable
  or skip:
    locus init --acknowledge-empty DC

[paradigm-vacant] ER (Error Taxonomy) has no definitions
  onboard:
    locus er add-domain-path "<glob>"
  or skip:
    locus init --acknowledge-empty ER

[paradigm-vacant] FL (Failure Lineage) has no definitions
  onboard:
    locus fl add-domain-path "<glob>"
  or skip:
    locus init --acknowledge-empty FL

[paradigm-vacant] OB (Observability) has no definitions
  onboard:
    locus ob add-observer-path "<glob>"
  or skip:
    locus init --acknowledge-empty OB

[paradigm-vacant] PA (Port / Adapter) has no definitions
  onboard:
    locus pa add-application-path "<glob>"
  or skip:
    locus init --acknowledge-empty PA

[paradigm-vacant] RM (Responsibility Mixing) has no definitions
  onboard:
    locus rm add-domain-path "<glob>"
  or skip:
    locus init --acknowledge-empty RM

[paradigm-vacant] RW (Runtime Work) has no definitions
  onboard:
    locus rw accept-runtime-owner "<glob>"
  or skip:
    locus init --acknowledge-empty RW

[paradigm-vacant] TA (Test Architecture) has no definitions
  onboard:
    locus ta add-test-path "<glob>"
  or skip:
    locus init --acknowledge-empty TA

[paradigm-vacant] UT (Utility Discipline) has no definitions
  onboard:
    locus ut add-utility-path "<glob>"
  or skip:
    locus init --acknowledge-empty UT

re-run `locus init` after applying changes.
